Put in new GC args that have worked well for multiple people